--- a/roles/zsh/tasks/main.yaml
+++ b/roles/zsh/tasks/main.yaml
@@ -12,13 +12,13 @@
     shell: /usr/bin/zsh
   become: yes
 
-- name: Set public
-  ansible.builtin.template:
-    dest: "{{ ansible_user_dir }}/.zsh_public"
-    src: ".zsh_public.j2"
+#- name: Set public
+#  ansible.builtin.template:
+#    dest: "{{ ansible_user_dir }}/.zsh_public"
+#    src: ".zsh_public.j2"
 
-- name: Set private
-  ansible.builtin.template:
-    dest: "{{ ansible_user_dir }}/.zsh_private"
-    src: ".zsh_private.j2"
-  no_log: true
+#- name: Set private
+#  ansible.builtin.template:
+#    dest: "{{ ansible_user_dir }}/.zsh_private"
+#    src: ".zsh_private.j2"
+#  no_log: true
