Updated name from Fonts to fonts

--- a/roles/fonts/tasks/main.yml
+++ b/roles/fonts/tasks/main.yml
@@ -16,9 +16,9 @@
     - name: Unzip FiraCode font
       ansible.builtin.unarchive:
         src: "/tmp/FiraCode.zip"
-        dest: "{{ ansible_env.HOME }}/.fonts"
+        dest: "{{ ansible_user_dir }}/.fonts"
         remote_src: yes
-        creates: "{{ ansible_env.HOME }}/.fonts/FiraCode-Regular.ttf"  # Adjust based on actual file name
+        creates: "{{ ansible_user_dir }}/.fonts/FiraCode-Regular.ttf"  # Adjust based on actual file name
       notify: Update font cache
 
     - name: Download Meslo font
@@ -30,9 +30,9 @@
     - name: Unzip Meslo font
       ansible.builtin.unarchive:
         src: "/tmp/Meslo.zip"
-        dest: "{{ ansible_env.HOME }}/.fonts"
+        dest: "{{ ansible_user_dir }}/.fonts"
         remote_src: yes
-        creates: "{{ ansible_env.HOME }}/.fonts/MesloLGM-Regular.ttf"  # Adjust based on actual file name
+        creates: "{{ ansible_user_dir }}/.fonts/MesloLGM-Regular.ttf"  # Adjust based on actual file name
       notify: Update font cache
   become: no  # Assuming you're running this as the target user; adjust as needed
 
