zsh with Oh-My-ZSH

--- a/roles/zsh/tasks/main.yaml
+++ b/roles/zsh/tasks/main.yaml
@@ -12,13 +12,47 @@
     shell: /usr/bin/zsh
   become: yes
 
-#- name: Set public
-#  ansible.builtin.template:
-#    dest: "{{ ansible_user_dir }}/.zsh_public"
-#    src: ".zsh_public.j2"
+# Install Oh-My-ZSH using the standard method, to avoid mishaps
+- name: Install Oh-My-ZSH
+  become_user: "{{ ansible_env['USER']}}"
+  block:
+    - name: Create tmporary file
+      ansible.builtin.file:
+        state: file
+      register: oh_my_zsh_install_script
 
-#- name: Set private
-#  ansible.builtin.template:
-#    dest: "{{ ansible_user_dir }}/.zsh_private"
-#    src: ".zsh_private.j2"
-#  no_log: true
+    - name: Download Oh-My-ZSH
+      ansible.builtin.get_url:
+        url: https://raw.github.com/ohmyzsh/ohmyzsh/master/tools/install.sh
+        dest: "{{ oh_my_zsh_install_script.path }}"
+        mode: "0700"
+
+    - name: Install Oh-My-ZSH
+      ansible.builtin.command: "{{ oh_my_zsh_install_script.path }} --unattended --keep-zshrc --skip-chsh"
+
+    - name: Remove the temporary file
+      ansible.builtin.file:
+        path: "{{ oh_my_zsh_install_script.path }}"
+        state: absent
+      when: oh_my_zsh_install_script.path is defined
+
+- name: Install powerlevel10k
+  ansible.builtin.git:
+    repo: https://github.com/romkatv/powerlevel10k.git
+    dest: "{{ ansible_user_dir }}/.oh-my-zsh/custom/themes/powerlevel10k"
+    clone: yes
+    update: yes
+  become: yes
+
+# link the .zshrc and .p10k.zsh files from the files directory
+- name: link .zshrc
+  ansible.builtin.file:
+    src: "{{ role_path }}/files/zshrc"
+    dest: "{{ ansible_user_dir }}/.zshrc"
+    state: link
+
+- name: link pk10k.zsh
+  ansible.builtin.file:
+    src: "{{ role_path }}/files/p10k.zsh"
+    dest: "{{ ansible_user_dir }}/.p10k.zsh"
+    state: link
