--- a/roles/zsh/tasks/main.yaml
+++ b/roles/zsh/tasks/main.yaml
@@ -35,6 +35,7 @@
   block:
     - name: Create tmporary file
       ansible.builtin.file:
+        path: "/tmp/oh-my-zsh-install.sh"
         state: file
       register: oh_my_zsh_install_script
 
