--- a/roles/zsh/tasks/main.yaml
+++ b/roles/zsh/tasks/main.yaml
@@ -24,6 +24,7 @@
     src: "{{ role_path }}/files/p10k.zsh"
     dest: "{{ ansible_user_dir }}/.p10k.zsh"
     state: link
+    force: yes
 
 # Install Oh-My-ZSH using the standard method, to avoid mishaps
 - name: Define oh_my_zsh_installation_folder
