--- a/roles/zsh/tasks/main.yaml
+++ b/roles/zsh/tasks/main.yaml
@@ -21,10 +21,9 @@
 
 - name: "link pk10k.zsh"
   ansible.builtin.file:
-    src: "{{ role_path }}/files/p10k.zsh"
-    dest: "{{ ansible_user_dir }}/.p10k.zsh"
+    src: "{{ role_path }}/files/pk10k.zsh"
+    dest: "{{ ansible_user_dir }}/.pk10k.zsh"
     state: link
-    force: yes
 
 # Install Oh-My-ZSH using the standard method, to avoid mishaps
 - name: Define oh_my_zsh_installation_folder
