Neovim check nodejs and npm are missing and install

--- a/roles/neovim/tasks/Archlinux.yml
+++ b/roles/neovim/tasks/Archlinux.yml
@@ -1,7 +1,9 @@
 ---
-- name: "Neovim | {{ ansible_distribution }} | Install Neovim Nightly"
+- name: "Neovim | {{ ansible_distribution }} | Dependencies"
   ansible.builtin.pacman:
     name:
       - neovim
+      - nodejs
+      - npm
     state: present
   become: true
