added required software

--- a/roles/system/tasks/Archlinux.yml
+++ b/roles/system/tasks/Archlinux.yml
@@ -11,5 +11,11 @@
     name:
       - jq
       - unzip
+      - autojump
+      - btop
+      - python3
+      - kitty
+      - ttf-font-awesome
+      - ttf-nerd-fonts-symbols
     state: present
   become: true
