--- a/roles/zsh/tasks/main.yaml
+++ b/roles/zsh/tasks/main.yaml
@@ -21,8 +21,8 @@
 
 - name: "link pk10k.zsh"
   ansible.builtin.file:
-    src: "{{ role_path }}/files/pk10k.zsh"
-    dest: "{{ ansible_user_dir }}/.pk10k.zsh"
+    src: "{{ role_path }}/files/p10k.zsh"
+    dest: "{{ ansible_user_dir }}/.p10k.zsh"
     state: link
 
 # Install Oh-My-ZSH using the standard method, to avoid mishaps
