--- a/roles/fabric/tasks/main.yml
+++ b/roles/fabric/tasks/main.yml
@@ -1,4 +1,25 @@
 ---
+- name: "Fabric | Ensure Python and pip are installed (Debian-based systems)"
+  ansible.builtin.apt:
+    name:
+      - python3
+      - python3-pip
+    state: present
+  when: ansible_facts['distribution'] == 'Debian' or ansible_facts['distribution'] == 'Ubuntu'
+
+- name: "Fabric | Ensure Python and pip are installed (Archlinux)"
+  ansible.builtin.pacman:
+    name:
+      - python
+      - python-pip
+    state: present
+  when: ansible_facts['distribution'] == 'Archlinux'
+
+- name: "Fabric | Install pipx using pip"
+  ansible.builtin.pip:
+    name: pipx
+    executable: pip3
+
 - name: "Fabric | Ensure the directory exists for home/petert/github"
   ansible.builtin.file:
     path: "{{ ansible_user_dir }}/github"
@@ -11,18 +32,6 @@
     dest: "{{ ansible_user_dir }}/github/fabric"
     clone: yes
     update: yes
-
-- name: "Fabric | Install pipx on Debian-based systems"
-  ansible.builtin.apt:
-    name: pipx
-    state: present
-  when: ansible_facts['distribution'] == 'Debian' or ansible_facts['distribution'] == 'Ubuntu'
-
-- name: "Fabric | Install pipx on Archlinux"
-  ansible.builtin.pacman:
-    name: pipx
-    state: present
-  when: ansible_facts['distribution'] == 'Archlinux'
 
 - name: "Fabric | Install Fabric using pipx"
   ansible.builtin.command:
