--- a/roles/fabric/tasks/main.yml
+++ b/roles/fabric/tasks/main.yml
@@ -8,13 +8,13 @@
       pacman:
         name: python-pipx
         state: present
-      when: ansible_distribution == 'Arch'
+      when: ansible_os_family == 'Archlinux'
 
     - name: Install pipx on Debian-based systems
       apt:
         name: python3-pipx
         state: present
-      when: ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu'
+      when: ansible_os_family == 'Debian'
 
 - name: "Fabric | Ensure the directory exists for home/petert/github"
   ansible.builtin.file:
