--- a/roles/kitty/tasks/main.yml
+++ b/roles/kitty/tasks/main.yml
@@ -6,6 +6,12 @@
     name: kitty
     state: present
 
+- name: "Fabric | Ensure the directory exists for /home/petert/.config/kitty"
+  ansible.builtin.file:
+    path: "{{ ansible_user_dir }}/.config/kitty"
+    state: directory
+    mode: '0755'
+
 - name: "Copy kitty config file"
   copy:
     src: "{{ role_path }}/files/kitty.conf"
