--- a/roles/fabric/tasks/main.yml
+++ b/roles/fabric/tasks/main.yml
@@ -17,6 +17,39 @@
         state: present
       become: true
       when: ansible_os_family == 'Debian'
+    # Ensure Python and pip are installed for both distributions
+    - name: Install Python and pip on Arch Linux
+      pacman:
+        name:
+          - python
+          - python-pip
+        state: present
+      become: true
+      when: ansible_os_family == 'Archlinux'
+
+    - name: Install Python and pip on Debian-based systems
+      apt:
+        name:
+          - python3
+          - python3-pip
+        state: present
+      become: true
+      when: ansible_os_family == 'Debian'
+
+    # Install pexpect using pip for both distributions
+    - name: Install pexpect on Arch Linux
+      pip:
+        name: pexpect
+        executable: pip
+      become: true
+      when: ansible_os_family == 'Archlinux'
+
+    - name: Install pexpect on Debian-based systems
+      pip:
+        name: pexpect
+        executable: pip3
+      become: true
+      when: ansible_os_family == 'Debian'
 
 - name: "Fabric | Ensure the directory exists for home/petert/github"
   ansible.builtin.file:
